--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <!-- <app-recent-orders></app-recent-orders> -->
 <div class="dashboardDiv">
-  <div class="container recent-orders">
-    <app-recent-orders> </app-recent-orders>
+  <div class="recent-orders">
+    <app-recent-orders></app-recent-orders>
   </div>
-  <div class="container statistics-container">
+  <div class="statistics-container">
     <app-statistics></app-statistics>
   </div>
   <!-- schnell eine bestellung hinzufügen
