--- a/frontend/src/app/dashboard/statistics/statistics.component.html
+++ b/frontend/src/app/dashboard/statistics/statistics.component.html
@@ -1,34 +1,32 @@
-<html>
+<div class="container title">Statistiken</div>
 
-<body>
-  <div class="container">
-    <div class="title">Statistiken</div>
-    <div class="filter">
-      <div class="filter-label"></div>
-      <select class="filter-select">
-        <option>Letzte 30 Tage</option>
-        <option>Letzte 7 Tage</option>
-        <option>Heute</option>
-      </select>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-6 col-sm-12 mb-3 mb-md-0 d-flex justify-content-start">
+      <label for="start" class="me-2">Von:</label>
+      <input type="date" id="start" name="trip-start" value="2024-01-01"/>
     </div>
-    <div class="cards">
-      <div class="card card-yellow">
-        <div class="card-icon">🛒</div>
-        <div class="card-title">Bestellungen</div>
-        <div class="card-value">{{totalSales}}</div>
-      </div>
-      <div class="card card-red">
-        <div class="card-icon">💰</div>
-        <div class="card-title">Umsatz</div>
-        <div class="card-value">{{revenue}}€</div>
-      </div>
-      <div class="card card-green">
-        <div class="card-icon">👛</div>
-        <div class="card-title">Einnahmen</div>
-        <div class="card-value">.....</div>
-      </div>
+    <div class="col-md-6 col-sm-12 d-flex justify-content-start justify-content-md-end">
+      <label for="end" class="me-2">Bis:</label>
+      <input type="date" id="end" name="trip-end" value="2024-02-22"/>
     </div>
   </div>
-</body>
+</div>
 
-</html>
+<div class="container cards">
+  <div class="card card-yellow">
+    <div class="card-icon">🛒</div>
+    <div class="card-title">Bestellungen</div>
+    <div class="card-value">{{totalSales}}</div>
+  </div>
+  <div class="card card-red">
+    <div class="card-icon">💰</div>
+    <div class="card-title">Umsatz</div>
+    <div class="card-value">{{revenue}}€</div>
+  </div>
+  <div class="card card-green">
+    <div class="card-icon">👛</div>
+    <div class="card-title">Einnahmen</div>
+    <div class="card-value">.....</div>
+  </div>
+</div>
