--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,11 @@
-<div class="conOverview">
-  <app-navbar class="sidebar">
-  </app-navbar>
-  <div class="main-content">
-    <router-outlet></router-outlet>
+<div class="container-fluid h-100 bg-light">
+  <div class="row h-100">
+    <div class="col-md-2 h-100 fixed-top">
+      <app-navbar></app-navbar>
+    </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-10 h-100">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
