--- a/frontend/src/app/sales-day-info/sales-day-info.component.html
+++ b/frontend/src/app/sales-day-info/sales-day-info.component.html
@@ -1,37 +1,38 @@
-<div class="col">
-  <div class="card h-100">
-    <img
-      src="https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f"
-      class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{salesDay.name}}</h5>
-      <p class="card-text">{{salesDay.dateString | date: 'dd.MM.yyyy'}}</p>
-      <div style="display: flex;justify-content: space-between;">
-        <button (click)="salesDayClicked(salesDay)" class="btn btn-secondary">Verkaufstag bearbeiten</button>
-        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          Löschen
-        </button>
+<div class="mb-3">
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body d-flex flex-column">
+        <div class="d-flex justify-content-between align-items-center">
+          <h5 class="card-title">{{salesDay.name}}</h5>
+          <!-- Positioning the date at the top-right -->
+          <h5 class="card-title me-2">{{salesDay.dateString | date: 'dd.MM.yyyy'}}</h5>
+        </div>
+        <div class="d-flex justify-content-between mt-2">
+          <button (click)="salesDayClicked(salesDay)" class="btn btn-secondary">Verkaufstag bearbeiten</button>
+          <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteSalesDay">
+            Löschen
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-
-<!--Modal zur Bestätigung des Löschens -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Verkaufstag löschen</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Möchtest du diesen Verkaufstag wirklich löschen?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
-        <button (click)="deleteClicked()" type="button" data-bs-dismiss="modal" class="btn btn-danger">Verkaufstag
-          löschen</button>
+  <!-- Modal zur Bestätigung des Löschens -->
+  <div class="modal fade" id="deleteSalesDay" tabindex="-1" aria-labelledby="deleteSalesDayLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="deleteSalesDayLabel">Verkaufstag löschen</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Möchtest du diesen Verkaufstag wirklich löschen?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
+          <button (click)="deleteClicked()" type="button" data-bs-dismiss="modal" class="btn btn-danger">Verkaufstag
+            löschen</button>
+        </div>
       </div>
     </div>
   </div>
