--- a/frontend/src/app/sales-days-overview/sales-days-overview.component.html
+++ b/frontend/src/app/sales-days-overview/sales-days-overview.component.html
@@ -1,16 +1,39 @@
-<div style="margin-bottom: 30px;" class="row row-cols-1 row-cols-md-4 g-4">
-  <div class="col">
-    <div class="card h-100">
-      <img
-        src="https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f"
-        class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Neuer Verkaufstag</h5>
-        <p class="card-text">Hiermit wird ein neuer Verkaufstag erstellt</p>
-        <a (click)="newSalesDayClick()" class="btn btn-secondary">Verkaufstag anlegen</a>
+<h1>{{dataService.selectedCategory.value.name}}</h1>
+<div style="margin-bottom: 30px;" class="row row-cols-1 row-cols-md-6 g-6">
+  <app-sub-category-info *ngFor="let subCategory of dataService.subCategories()" [subCategory]="subCategory">
+  </app-sub-category-info>
+</div>
+<button class="btn btn-success rounded-circle position-fixed bottom-0 end-0 m-3 btn-lg" data-bs-toggle="modal" data-bs-target="#newSalesDay" style="z-index: 1000;">+</button>
+
+
+<!-- Modal zur erstellung eines neuen Verkauftags -->
+<div class="modal fade" id="newSalesDay" tabindex="-1" aria-labelledby="newSalesDayLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="newSalesDayLabel">Neuen Verkaufstag anlegen</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-3">
+          <div class="col">
+            <h3>Name:</h3>
+            <input #selectedName placeholder="Name for the day" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="row g-3 mt-3">
+          <div class="col">
+            <h3>Datum:</h3>
+            <input #selectedDate type="date" class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
+        <button (click)="createSalesDayClicked(selectedName.value, selectedDate.value)" type="button" data-bs-dismiss="modal" class="btn btn-success">Neuen Verkaufstag anlegen</button>
       </div>
     </div>
   </div>
-  <app-sales-day-info *ngFor="let salesDay of dataService.salesDays()" [salesDay]="salesDay">
-  </app-sales-day-info>
 </div>
+
+<app-sales-day-info *ngFor="let salesDay of dataService.salesDays()" [salesDay]="salesDay"></app-sales-day-info>
