--- a/frontend/src/app/welcome-page/welcome-page.component.html
+++ b/frontend/src/app/welcome-page/welcome-page.component.html
@@ -1,5 +1,9 @@
-<body class="containerColor">
-    <div class="content">
-        <h1 id="typewriterWelcome"></h1>
+<body class="bg-secondary d-flex align-items-center justify-content-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center text-light display-2 fw-bold">{{welcomeText}}</h1>
+            </div>
+        </div>
     </div>
 </body>
