--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -257,6 +257,7 @@
             class="form-control"
             id="quantity"
             min="0"
+            max="{{maxWeight}}"
             placeholder="0.0"
           />
         </td>
@@ -379,13 +380,15 @@
           <table class="table table-hover">
             <th>Gewicht</th>
             <th>Notizen</th>
+     
 
             @for (meatPiecePart of dataService.meatPieceParts(); track
             meatPiecePart) {
             <tr>
               <td>{{ meatPiecePart.weight }}</td>
 
-              eo
+              <td>{{ meatPiecePart.notes }}</td>
+              <td><button (click)="meatPiecePartSelected(meatPiecePart)">Auswählen</button></td>
             </tr>
             }
           </table>
@@ -399,7 +402,7 @@
             Abbrechen
           </button>
           <button type="button" data-bs-dismiss="modal" class="btn btn-success">
-            Bestand hinzufügen
+            Bestätigen
           </button>
         </div>
       </div>
